@@ -243,16 +243,17 @@ class VfsFactory:
     def __init__(self):
         self.implementations = {}
         
-    def register(self, scheme, implementation):
+    def register(self, scheme, implementation, **kwargs):
         if scheme in self.implementations:
             raise obnamlib.Error('URL scheme %s already registered' % scheme)
-        self.implementations[scheme] = implementation
+        self.implementations[scheme] = (implementation, kwargs)
 
     def new(self, url, create=False):
         '''Create a new VFS appropriate for a given URL.'''
         scheme, netloc, path, params, query, fragment = urlparse.urlparse(url)
         if scheme in self.implementations:
-            return self.implementations[scheme](url, create=create)
+            klass, kwargs = self.implementations[scheme]
+            return klass(url, create=create, **kwargs)
         raise obnamlib.Error('Unknown VFS type %s' % url)
             
             
